--- a/rms.html
+++ b/rms.html
@@ -60,6 +60,6 @@
             </tfoot>
         </table>
     </div>
-    <nav><a href="finpass.html"><img src="voltar.png" alt="voltar" rel="prev"></a></nav>
+    <nav><a href="index.html"><img src="voltar.png" alt="voltar" rel="prev"></a></nav>
 </body>
 </html>
